--- a/style.guide.html
+++ b/style.guide.html
@@ -10,8 +10,8 @@
     <header class="site-header">
         <h1 class="logo">COOKIES</h1>
         <nav class="nav a">
-            <a href="index.html"></a>
-            <a href="style.guide.html"></a>
+            <a href="index.html">HOME</a>
+            <a href="style.guide.html">RESEP</a>
         </nav>
     </header>
     <main class="content">
@@ -59,4 +59,5 @@
 
     </script>
 </body>
+
 </html>
